plugins {
    id "java"
    id "org.springframework.boot" version "2.7.18"
    id "io.spring.dependency-management" version "1.1.6"
}

group = "com.realhogoo"
version = "0.0.1-SNAPSHOT"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
    maven {
        url "https://maven.egovframe.go.kr/maven"
    }
}

configurations {
    all {
        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
    }
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter-web"

    implementation("org.egovframe.rte:org.egovframe.rte.psl.dataaccess:4.3.0") {
        exclude group: "org.springframework.boot", module: "spring-boot-starter"
    }
    implementation("org.egovframe.rte:org.egovframe.rte.fdl.property:4.3.0") {
        exclude group: "org.springframework.boot", module: "spring-boot-starter"
    }

    implementation "com.fasterxml.jackson.core:jackson-databind:2.13.5"
    implementation "com.auth0:java-jwt:4.4.0"
    implementation "org.mybatis:mybatis:3.5.16"
    implementation "org.mybatis:mybatis-spring:2.1.2"
    implementation "com.zaxxer:HikariCP:5.1.0"

    runtimeOnly "org.postgresql:postgresql:42.7.4"
    runtimeOnly "org.apache.logging.log4j:log4j-slf4j-impl:2.23.1"
    runtimeOnly "org.apache.logging.log4j:log4j-api:2.23.1"
    runtimeOnly "org.apache.logging.log4j:log4j-core:2.23.1"
    runtimeOnly "org.apache.logging.log4j:log4j-web:2.23.1"

    testImplementation "org.springframework.boot:spring-boot-starter-test"
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
}

tasks.named("test") {
    useJUnitPlatform()
}
